--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-dev-client": "~5.0.9",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
