--- a/app.json
+++ b/app.json
@@ -58,5 +58,9 @@
         "projectId": "57520902-19df-447c-940e-33bb320bd176"
       }
     }
+  },
+  "web": {
+    "output": "server",
+    "bundler": "metro"
   }
 }
